2005-04-23 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp (create_file_url):
	Throw an exception if realpath/_fullpath does not succeed.

2005-04-23 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::scene::get_resource):  Fixed test to check whether
	create_file_url should be called.

2005-04-23 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp:  When loading the root
	scene, set browser::world_url as soon as we have a usable
	stream.

2005-04-21 Braden McDaniel  <braden@endoframe.com>

	Changed convention for scoping definitions.  Definitions are now
	explicitly qualified in the global scope rather than enclosed in
	namespace scope blocks.

	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/bounding_volume.cpp
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/event.cpp
	* src/libopenvrml/openvrml/exposedfield.cpp
	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/frustum.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node_ptr.cpp
	* src/libopenvrml/openvrml/rendering_context.cpp
	* src/libopenvrml/openvrml/scope.cpp
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/viewer.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp

2005-04-20 Braden McDaniel  <braden@endoframe.com>

	Merged changes from 0.15.7 release.

	* Makefile.am:  Use "tests" directory instead of "test".
	* NEWS:  Updated for 0.15.7 release.
	* README:  Removed references to --disable-tests option and
	DejaGnu dependency.
	* configure.ac  Removed --disable-tests option; removed DejaGnu
	initialization; added autotest initialization.
	* openvrml.spec.in:  Removed dejagnu build prerequisite.
	* examples/sdk_viewer.cpp:  sdl_error should publicly inherit
	std::runtime_error.
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml/openvrml.vcproj
	* mozilla-plugin/configure.ac:  configure fails if the PATH